--- a/change-studentMsg.html
+++ b/change-studentMsg.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>申请变更</title>
-    <link rel="stylesheet" href="/change-syudentMsg.css">
-    <link rel="stylesheet" href="/common.css">
+    <link rel="stylesheet" href="change-syudentMsg.css">
+    <link rel="stylesheet" href="common.css">
 </head>
 
 <body>
